@@ -241,3 +241,7 @@ added classes AffyExonPDInfo and AffySTPDInfo
 04-10-2010 - B Carvalho (1.9.55)
 
 ** initializeBig(Vector/Matrix) get a 'initdata' argument
+
+05-22-2010 - R. Scharpf (1.11.1)
+
+** fixed man page for requireClusterPkgSet.  Added integerScoreToProbability function.
